# wwebsite

./: .env.example  .gitignore  404.html  Cargo.toml  LICENSE  README.md  Trunk.toml  _typos.toml  deny.toml  index.html  justfile  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
src/: components.rs  constants.rs  contexts.rs  i18n.rs  lib.rs  pages.rs  styles.rs  supabase.rs  types.rs
src/components/: admin.rs  common.rs  layout.rs
src/components/admin/: csv_export.rs  dashboard.rs  guest_group_modal.rs  guests.rs  photos.rs  rsvps.rs
src/contexts/: admin_context.rs  guest_context.rs  supabase_context.rs
src/i18n/: en.rs  fr.rs  it.rs
src/pages/: admin.rs  events.rs  gallery.rs  home.rs  invitation.rs  rsvp.rs
src/services/: supabase.rs
src/supabase/: admin_client.rs  error.rs  helpers.rs  rpc_client.rs
src/types/: admin.rs  age_category.rs  auth.rs  dietary.rs  guest.rs  language.rs  location.rs
style/: main.css  output.css
supabase/migrations/: 20260209191935_initial_schema.sql  20260218120000_add_invitation_sent.sql  20260221100000_add_invited_by.sql  20260221110000_invited_by_to_jsonb.sql  20260222120000_add_rsvp_submitted.sql  20260226000000_add_self_added_to_guests.sql
